--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,18 @@
+.wrapper {
+    background: #3470FF;
+    padding: 20px 0;
+}
+
+
+
 .menu {
     list-style: none;
     display: flex;
     justify-content: center;
+    /* list-style: none;
+    margin: 0;
+    padding: 0;
+     */
 }
 
 .link {
