--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
   font-family: "Manrope";
   src: url("../fonts/Manrope-Regular.ttf") format("truetype");
   font-weight: 400;
@@ -17,4 +17,4 @@
   src: url("../fonts/Manrope-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
-} */
+}
