--- a/src/components/ListCards/ListCards.module.css
+++ b/src/components/ListCards/ListCards.module.css
@@ -1,13 +1,21 @@
 
 
 .wrapper {  
-  padding: 0 20px 80px 20px;
+  list-style: none; 
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
      align-items: center;
    justify-content: space-around;
-    gap: 80px 20px;
-    padding: 0 32px 140px 32px;
+    
+    gap: 50px 29px;
+    margin: 0 128px;
+    /* max-width: 1440px; */
+
+    margin-block-start: 0;
+    margin-block-end: 0;
+  
+    padding-inline-start: 0px;
    }
 
 
