--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,41 +1,180 @@
 .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(103, 208, 120);
-    padding: 20px;
-    z-index: 10;
-    border: 1px solid #ccc;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    max-width: 500px;
-    max-height: 500px;
-    overflow: auto;
-  }
+  position: absolute;
+  top: 150px;
+  left: 496px;
   
-  /* Стилі для кнопки "Закрити" */
- 
-  .modalBackdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Півпрозорий фон */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 100; /* Задайте вищий z-index, ніж для модального вікна */
-  }
+  background-color: rgb(103, 208, 120);
+  /* padding: 20px; */
+  z-index: 10;
+  /* width: 541px; */
+/* height: 752px; */
+padding: 40px;
+  border-radius: 24px;
+background: #FFF;
+  
+  /* max-height: calc(100vh - 20px); Висота екрану мінус 20px відступи */
+  overflow: auto;
+}
 
-  .closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    color: #888;
-    background: none;
-    border: none;
-    outline: none;
-  }
+/* Стилі для кнопки "Закрити" */
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(18, 20, 23, 0.50); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100; /* Задайте вищий z-index, ніж для модального вікна */
+  overflow: auto; /* Додайте цей стиль */
+}
+
+.closeButton {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  cursor: pointer;
+  /* font-size: 24px; */
+  color: #888;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.cardImg {
+  background-position: center top;
+  background-size: cover;
+  
+  border-radius: 14px;
+  
+   width: 461px;
+     height: 248px;
+   }
+
+   .info {
+    margin-top: 0px;
+    font-size: 12px;
+ font-style: normal;
+ font-weight: 400;
+ line-height: 18px;
+ color: rgba(18, 20, 23, 0.50);
+ }
+
+ .wrapper {    
+ 
+    width: 461px;
+    /* padding-top: 14px; */
+}
+
+.dash {
+  margin: 0 6px;
+}
+
+.titleWrapper {
+  display: flex;
+  flex-wrap: wrap;
+   align-items: center;
+ justify-content: space-between;
+ margin: 14px 0 8px 0;
+}
+
+.title {
+  color: #121417;
+font-family: Manrope;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+}
+.description {
+  color: #121417;
+font-family: Manrope;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px;
+
+margin-top: 14px;
+}
+.titleAccessories {
+  color: #121417;
+font-family: Manrope;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px;
+
+margin-top: 24px;
+margin-bottom: 8px;
+}
+
+.titleConditions {
+  color: #121417;
+font-family: Manrope;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px;
+
+margin-top: 24px;
+margin-bottom: 15px;
+}
+
+.listConditions {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;  
+ justify-content: start;
+  
+  gap: 8px 8px;
+}
+/* <div className={`${css.card} ${css.wrapper}`}> */
+.value {
+  color: #3470FF;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: -0.24px;
+}
+
+.itemConditions {
+  color: #363535;
+font-family: Manrope;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 18px;
+
+padding: 7px 14px;
+
+border-radius: 35px;
+background: #F9F9F9;
+}
+
+.btnRent {
+  margin-top: 24px;
+  border-radius: 12px;
+background: #3470FF;
+display: inline-flex;
+padding: 12px 50px;
+justify-content: center;
+align-items: center;
+
+color: var(--White, #FFF);
+font-family: Manrope;
+font-size: 14px;
+font-style: normal;
+font-weight: 600;
+line-height: 20px; 
+border: none; 
+  outline: none;
+}
+
+.accentСolor {
+  color: #3470FF;
+}
