--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,29 +1,43 @@
 .wrapper {
-    background: #3470FF;
-    padding: 20px 0;
+    background: white;
+    /* padding: 20px 0; */
+    
 }
-
-
 
 .menu {
     list-style: none;
     display: flex;
     justify-content: center;
-    /* list-style: none;
-    margin: 0;
-    padding: 0;
-     */
+    
+    /* margin: 0; */
+    margin-top: 20px; 
+    margin-bottom: 20px;
+  
 }
-
 .link {
     text-decoration: none;
-    color: red;
+    color: #3470FF;
     display: inline-block;
-    padding: 5px 15px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    padding: 5px 30px;
+    font-family: Manrope;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
 }
 
 .link:global(.active) {
     font-weight: bold;
+    color: #0950f7;
+}
+
+.flagY {
+    background-color: #e7f70a;
+    height: 10px;
+}
+
+.flagB {
+    background-color: #049cfb;
+    height: 10px;
 }
 
