--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -127,7 +127,7 @@ margin-bottom: 15px;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;  
- justify-content: start;
+ justify-content: flex-start;
   
   gap: 8px 8px;
 }
