--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -12,8 +12,9 @@
    
     background-color: transparent;
     margin: 100px auto 150px auto;
-
 }
+
+
 .textLoadMore {
     width: 79px;
     height: 24px;
@@ -24,4 +25,9 @@ font-style: normal;
 font-weight: 500;
 line-height: 24px; 
 text-decoration-line: underline;
+}
+
+.textLoadMore:hover,
+.textLoadMore:focus {
+  color: #0B44CD;
 }
