--- a/src/components/Form/CatalogForm/CatalogForm.module.css
+++ b/src/components/Form/CatalogForm/CatalogForm.module.css
@@ -56,7 +56,7 @@
 
 .btnSubmit:hover,
 .btnSubmit:focus {
-  background-color: #0B44CD;
+  background-color: #0b44cd;
 }
 
 .btnItem {
@@ -83,10 +83,19 @@ input {
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
-  padding: 0;
+  padding-left: 24px;
   border-radius: 14px 0px 0px 14px;
 
   background: #f7f7fb;
+}
+
+.input::placeholder {
+  color: #121417;
+font-family: Manrope;
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px;
 }
 
 .inputRight {
