--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -14,8 +14,7 @@
 }
 
 .title2 {
-  color: rgb(22, 23, 18);
-  color: rgba(52, 112, 255, 1);
+  color: #0b44cd;
   font-family: Manrope;
   font-size: 16px;
   font-style: normal;
