--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
 
 body {
   margin: 0;
-  font-family: "Manrope", sans-serif;
+  padding: 0;
+  font-family: 'Manrope', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+
+  height: 100vh;
 }
 
 code {
@@ -15,56 +20,53 @@ code {
 /* Style */
 
 div,
-  section,
-  span,
-  object,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  fieldset,
-  form {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-  }
+section,
+span,
+object,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+fieldset,
+form {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 
-  nav,
-  a {
-    display: block;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    text-decoration: none;
-  }
+nav,
+a {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  text-decoration: none;
+}
 
-  ol,
-  ul,
-  li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+ol,
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
-  body {
-    width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
-  }
-
-
-  
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
