--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,7 @@
+.page {
+  width: 1440px;
+  margin-bottom: 150px;
+}
 .wrapper {
   /* background-image: url('images/car.jpg'); */
   background-image: url('images/lavander.jpg'); 
