--- a/src/pages/CatalogPage/CatalogPage.module.css
+++ b/src/pages/CatalogPage/CatalogPage.module.css
@@ -1,6 +1,7 @@
 .page {
   width: 1440px;
   margin-bottom: 150px;
+  background: white;
 }
 
 .btnLoadMore {
@@ -30,4 +31,21 @@
 .textLoadMore:hover,
 .textLoadMore:focus {
   color: #0b44cd;
+}
+
+.text {
+  color: #3470FF;
+font-family: Manrope;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+}
+
+.boxText {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+
 }
