--- a/src/pages/FavoritesPage/FavoritesPage.module.css
+++ b/src/pages/FavoritesPage/FavoritesPage.module.css
@@ -2,4 +2,22 @@
     width: 1440px;
     padding-bottom: 350px;
     text-align: center;
+    background: white;
+}
+
+.text {
+    color: #3470FF;
+font-family: Manrope;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+}
+
+.boxText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+
 }
