--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 .page {
   width: 1440px;
-  margin-bottom: 150px;
+  padding-bottom: 150px;
 }
 .wrapper {
   /* background-image: url('images/car.jpg'); */
